// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProgressBar.svelte > should render indeterminate progress 1`] = `
<div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    data-indeterminate="true"
    data-progress-root=""
    role="progressbar"
    style="height: 1.5mm;"
  >
    <div
      data-progress-bar=""
      style="width: 100%;"
    />
  </div>
  
</div>
`;

exports[`ProgressBar.svelte > should render indeterminate progress 2`] = `
<div>
  <div
    aria-valuemin="0"
    data-indeterminate="true"
    data-progress-root=""
    role="progressbar"
    style="height: 1.5mm;"
  >
    <div
      data-progress-bar=""
      style="width: 100%;"
    />
  </div>
  
</div>
`;

exports[`ProgressBar.svelte > should render progress bar with class 1`] = `
<div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    class="my-class"
    data-indeterminate="true"
    data-progress-root=""
    role="progressbar"
    style="height: 1.5mm;"
  >
    <div
      data-progress-bar=""
      style="width: 100%;"
    />
  </div>
  
</div>
`;

exports[`ProgressBar.svelte > should render progress bar with class 2`] = `
<div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    class="my-class-2"
    data-indeterminate="true"
    data-progress-root=""
    role="progressbar"
    style="height: 1.5mm;"
  >
    <div
      data-progress-bar=""
      style="width: 100%;"
    />
  </div>
  
</div>
`;

exports[`ProgressBar.svelte > should render progress bar with value 1`] = `
<div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="50"
    data-indeterminate="false"
    data-progress-root=""
    role="progressbar"
    style="height: 1.5mm;"
  >
    <div
      data-progress-bar=""
      style="width: 50%;"
    />
  </div>
  
</div>
`;

exports[`ProgressBar.svelte > should render progress bar with value 2`] = `
<div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="100"
    data-indeterminate="false"
    data-progress-root=""
    role="progressbar"
    style="height: 1.5mm;"
  >
    <div
      data-progress-bar=""
      style="width: 100%;"
    />
  </div>
  
</div>
`;

exports[`ProgressBar.svelte > should render progress with custom height 1`] = `
<div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    data-indeterminate="true"
    data-progress-root=""
    role="progressbar"
    style="height: 3px;"
  >
    <div
      data-progress-bar=""
      style="width: 100%;"
    />
  </div>
  
</div>
`;

exports[`ProgressBar.svelte > should render progress with custom height 2`] = `
<div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    data-indeterminate="true"
    data-progress-root=""
    role="progressbar"
    style="height: 5px;"
  >
    <div
      data-progress-bar=""
      style="width: 100%;"
    />
  </div>
  
</div>
`;
